faas-netes/faas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openfaas-ingress
  labels:
    name: openfaas-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
  namespace: 'openfaas'
spec:
  rules:
    - host: faas.todolist.hkust.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-internal
                port:
                  number: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openfaas
    component: gateway
  name: gateway-internal
  namespace: 'openfaas'
spec:
  type: ClusterIP
  ports:
    - name: gateway-internal
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: gateway
